--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
     "aes",
     "data",
     "persistence"
+  ],
+  "samples": [
+    {
+      "displayName": "Demo Scene",
+      "description": "Sample scene demonstrating usage of FileManager",
+      "path": "Samples~/Demo"
+    }
   ]
 }
