--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   ],
   "samples": [
     {
-      "displayName": "Demo Scene",
+      "displayName": "Demo",
       "description": "Sample scene demonstrating usage of FileManager",
       "path": "Samples~/Demo"
     }
