네임스페이스 변경

--- a/Editor/LifeLogs.FileSystem.Editor.asmdef
+++ b/Editor/LifeLogs.FileSystem.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "LifeLogs.FileManager.Editor",
+    "name": "LifeLogs.FileSystem.Editor",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
